0023622: IGES import produces invalid shape with parameter read.iges.bspline.continuity=0 Adding test cases for this fix